--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "version": "0.6.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,7 +13,6 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "material-ui": "^0.20.2",
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
