--- a/frontend/src/.editorconfig
+++ b/frontend/src/.editorconfig
@@ -8,5 +8,6 @@ indent_style = tab
 indent_size = 2
 end_of_line = crlf
 charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = false
+trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 100
