--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5440/gg-learning?autoReconnect=true
+spring.datasource.url=jdbc:postgresql://localhost:5440/gg-learning?autoReconnect=true
 spring.datasource.username=admin
 spring.datasource.password=123mudar
 spring.jpa.hibernate.ddl-auto=update
