--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: admin # The PostgreSQL user (useful to connect to the database)
       POSTGRES_PASSWORD: 123mudar # The PostgreSQL password (useful to connect to the database)
-      POSTGRES_DB: GG-LEARNING # The PostgreSQL default database (automatically created at first launch)
+      POSTGRES_DB: gg-learning # The PostgreSQL default database (automatically created at first launch)
     volumes:
       - db:/var/lib/postgres
     ports:
