--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/roboto": "^4.5.7",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -19,6 +20,7 @@
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.52.1",
