--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 spring.devtools.remote.secret=123
+
+jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
+# três dias de expiração
+jwt.expiration=60000
