--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.27.2",
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
