Cria autorizaçao na sessao
Implementa #66.

Signed-off-by: Matheus Tirabassi <tirabassi.matheus@aluno.ifsp.edu.br>

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.devtools.remote.secret=123
 
 jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
 # três dias de expiração
-jwt.expiration=60000
+jwt.expiration=259200000
